# mcp-weather-stdio

./: LICENSE  readme.md  requirements.txt  setup.py
docs/: global_package_install_instructions.md  installation.md  integration.md  server_structure.md  setting_up_claude_desktop.md  tool_implementation.md  uv_package_install_instructions.md
scripts/: install_deps.bat  setup.bat
src/: pyproject.toml
src/mcp_weather_service_stdio/: __init__.py  __main__.py  weather_server.py
src/mcp_weather_service_stdio/weather_util/: __init__.py  client.py  constants.py  enums.py  forecast.py
test/: inspect.bat
